--- a/crates/cdk/Cargo.toml
+++ b/crates/cdk/Cargo.toml
@@ -19,13 +19,16 @@ nostr = ["dep:nostr-sdk"]
 async-trait = "0.1"
 base64 = "0.22" # bitcoin uses v0.13 (optional dep)
 bip39 = "2.0"
-bitcoin = { version = "0.30", features = [
+bitcoin = { version = "0.31", features = [
     "serde",
     "rand",
     "rand-std",
 ] } # lightning-invoice uses v0.30
 http = "1.0"
-lightning-invoice = { version = "0.31", features = ["serde"] }
+# lightning-invoice = { version = "0.31", features = ["serde"] }
+lightning-invoice = { git = "https://github.com/jirijakes/rust-lightning.git", branch = "upgrade-bitcoin-031", features = [
+    "serde",
+] }
 once_cell = "1.19"
 reqwest = { version = "0.12", default-features = false, features = [
     "json",
@@ -44,7 +47,7 @@ url = "2.3"
 uuid = { version = "1", features = ["v4"] }
 nostr-sdk = { version = "0.31.0", default-features = false, features = [
     "nip04",
-    "nip44"
+    "nip44",
 ], optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
