--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [workspace]
-members = [
-    "bindings/cdk-js",
-    "crates/*",
-]
+members = ["bindings/cdk-js", "crates/*"]
 resolver = "2"
 
 [workspace.package]
 license = "MIT"
 homepage = "https://github.com/cashubtc/cdk"
 repository = "https://github.com/cashubtc/cdk.git"
-rust-version = "1.70.0" # MSRV
+rust-version = "1.70.0"                            # MSRV
 
 [workspace.metadata]
 authors = ["CDK Developers"]
@@ -28,13 +25,17 @@ cdk-sqlite = { path = "./crates/cdk-sqlite", default-features = false }
 cdk-redb = { path = "./crates/cdk-redb", default-features = false }
 tokio = { version = "1.32", default-features = false }
 thiserror = "1"
-tracing = { version = "0.1", default-features = false, features = ["attributes"] }
+tracing = { version = "0.1", default-features = false, features = [
+    "attributes",
+] }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = "1"
 serde-wasm-bindgen = { version = "0.6.5", default-features = false }
-web-sys =  { version = "0.3.68", default-features = false, features = ["console"] }
+web-sys = { version = "0.3.68", default-features = false, features = [
+    "console",
+] }
 uniffi = { version = "0.27.1", default-features = false }
-bitcoin = { version = "0.30", features = [
+bitcoin = { version = "0.31", features = [
     "serde",
     "rand",
     "rand-std",
