--- a/crates/cdk/Cargo.toml
+++ b/crates/cdk/Cargo.toml
@@ -23,7 +23,7 @@ bip39 = "2.0"
 http = "1.0"
 bitcoin = { workspace = true, features = ["serde", "rand", "rand-std"] }
 # lightning-invoice = { version = "0.31", features = ["serde"] }
-lightning-invoice = { git = "https://github.com/jirijakes/rust-lightning.git", branch = "upgrade-bitcoin-031", features = [
+lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning.git", features = [
     "serde",
 ] }
 once_cell = "1.19"
