--- a/crates/cdk/Cargo.toml
+++ b/crates/cdk/Cargo.toml
@@ -25,7 +25,7 @@ bitcoin = { workspace = true, features = ["serde", "rand", "rand-std"] }
 # lightning-invoice = { version = "0.31", features = ["serde"] }
 lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning.git", features = [
     "serde",
-] }
+], rev = "b8cdde8" }
 once_cell = "1.19"
 reqwest = { version = "0.12", default-features = false, features = [
     "json",
