--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ keywords = ["bitcoin", "e-cash", "cashu"]
 [workspace.dependencies]
 async-trait = "0.1.74"
 anyhow = "1"
-bitcoin = { version = "0.30", default-features = false } # lightning-invoice uses v0.30
+bitcoin = { version = "0.32", default-features = false }
 bip39 = "2.0"
 cdk = { version = "0.1", path = "./crates/cdk", default-features = false }
 cdk-rexie = { version = "0.1", path = "./crates/cdk-rexie", default-features = false }
