Initial Nostr Wallet Impl

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,10 @@ web-sys =  { version = "0.3.69", default-features = false, features = ["console"
 uuid = { version = "1", features = ["v4"] }
 lightning-invoice = { version = "0.31", features = ["serde"] }
 home = "0.5.9"
+nostr-sdk = { version = "0.32.0", default-features = false, features = [
+    "nip04",
+    "nip44"
+]}
 
 [profile]
 
