--- a/crates/cdk-cli/Cargo.toml
+++ b/crates/cdk-cli/Cargo.toml
@@ -25,7 +25,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 rand = "0.8.5"
 home.workspace = true
-nostr-sdk = { version = "0.32.0", default-features = false, features = [
-    "nip04",
-    "nip44"
-]}
+nostr-sdk.workspace = true
