--- a/crates/cdk-cli/Cargo.toml
+++ b/crates/cdk-cli/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["CDK Developers"]
 description = "Cashu cli wallet built on CDK"
 homepage.workspace = true
 repository.workspace = true
-rust-version.workspace = true # MSRV
+rust-version.workspace = true                 # MSRV
 license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,9 +14,14 @@ license.workspace = true
 [dependencies]
 anyhow = "1.0.75"
 bip39.workspace = true
-cdk = { workspace = true, default-features = false, features = ["wallet"] }
+cdk = { workspace = true, default-features = false, features = [
+    "wallet",
+    "nostr",
+] }
 cdk-redb = { workspace = true, default-features = false, features = ["wallet"] }
-cdk-sqlite = { workspace = true, default-features = false, features = ["wallet"] }
+cdk-sqlite = { workspace = true, default-features = false, features = [
+    "wallet",
+] }
 clap = { version = "4.4.8", features = ["derive", "env"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
